src/test/resources/stakeholders/invalid/owners/src/main/stakeholders/Second.owner
package owners

owner Second {
    display = "Second"
}
